[project]
name = "fifo-dev-common"
version = "0.1.0"
description = "Core Python utilities shared across all fifo-dev repositories"
authors = [
  { name = "Florent Gastoud" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"